<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:orientation="vertical"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblSalutation"
                    android:layout_marginBottom="5dip"
                    android:singleLine="true" />

                <EditText android:id="@+id/txtSalutation"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:singleLine="true" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblFirstname"
                    android:layout_marginBottom="5dip"
                    android:singleLine="true" />

                <EditText android:id="@+id/txtFirstname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:singleLine="true" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblLastname"
                    android:layout_marginBottom="5dip"
                    android:singleLine="true" />

                <EditText android:id="@+id/txtLastname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:singleLine="true" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblStreet"
                    android:layout_marginBottom="5dip"
                    android:singleLine="true" />

                <EditText android:id="@+id/txtStreet"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:singleLine="true" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblHNumber"
                    android:layout_marginBottom="5dip"
                    android:singleLine="true" />

                <EditText android:id="@+id/txtHNumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:singleLine="true" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblZipcode"
                    android:layout_marginBottom="5dip"
                    android:singleLine="true" />

                <EditText android:id="@+id/txtZipcode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:singleLine="true" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblLocation"
                    android:layout_marginBottom="5dip"
                    android:singleLine="true" />

                <EditText android:id="@+id/txtLocation"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:singleLine="true" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblEmail"
                    android:layout_marginBottom="5dip"
                    android:singleLine="true" />

                <EditText android:id="@+id/txtEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:singleLine="true"
                    android:inputType="textEmailAddress" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblUsername"
                    android:layout_marginBottom="5dip"
                    android:singleLine="true" />

                <EditText android:id="@+id/txtUsername"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:singleLine="true" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblPassword"
                    android:layout_marginBottom="5dip"
                    android:singleLine="true" />

                <EditText android:id="@+id/txtPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:password="true"
                    android:singleLine="true"
                    android:inputType="textPassword" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblPassword2"
                    android:layout_marginBottom="5dip"
                    android:singleLine="true" />

                <EditText android:id="@+id/txtPassword2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:password="true"
                    android:singleLine="true"
                    android:inputType="textPassword" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button android:id="@+id/btnRegister"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnRegister"
                    android:layout_column="0" />
            </TableRow>

        </TableLayout>

    </ScrollView>

</LinearLayout>